WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
173940
Fix for intermittent Layout Test fail http/tests/loading/resourceLoadStatistics/telemetry-generation.html
https://bugs.webkit.org/show_bug.cgi?id=173940
Summary
Fix for intermittent Layout Test fail http/tests/loading/resourceLoadStatisti...
John Wilander
Reported
2017-06-28 14:52:02 PDT
The regular resource load statistics telemetry handler fires, which triggers early TestRunner callbacks and test failures. We should turn off regular telemetry in layout tests.
Attachments
Patch
(15.13 KB, patch)
2017-06-28 16:25 PDT
,
John Wilander
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews107 for mac-elcapitan-wk2
(1.11 MB, application/zip)
2017-06-28 17:31 PDT
,
Build Bot
no flags
Details
Patch for landing
(15.45 KB, patch)
2017-06-29 15:07 PDT
,
John Wilander
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
John Wilander
Comment 1
2017-06-28 14:52:25 PDT
rdar://problem/33018125
John Wilander
Comment 2
2017-06-28 16:25:24 PDT
Created
attachment 314065
[details]
Patch
Build Bot
Comment 3
2017-06-28 17:31:02 PDT
Comment on
attachment 314065
[details]
Patch
Attachment 314065
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.webkit.org/results/4016614
New failing tests: media/video-no-audio.html
Build Bot
Comment 4
2017-06-28 17:31:04 PDT
Created
attachment 314073
[details]
Archive of layout-test-results from ews107 for mac-elcapitan-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews107 Port: mac-elcapitan-wk2 Platform: Mac OS X 10.11.6
John Wilander
Comment 5
2017-06-29 11:50:04 PDT
Comment on
attachment 314065
[details]
Patch Had a chat with Jer Noble and the test failure is unrelated according to him.
Brent Fulgham
Comment 6
2017-06-29 13:47:34 PDT
Comment on
attachment 314065
[details]
Patch r=me
WebKit Commit Bot
Comment 7
2017-06-29 14:31:41 PDT
Comment on
attachment 314065
[details]
Patch Rejecting
attachment 314065
[details]
from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-02', 'apply-attachment', '--no-update', '--non-interactive', 314065, '--port=mac']" exit_code: 2 cwd: /Volumes/Data/EWS/WebKit Last 500 characters of output: csManager.cpp patching file Source/WebKit2/UIProcess/API/C/WKResourceLoadStatisticsManager.h patching file Tools/ChangeLog Hunk #1 succeeded at 1 with fuzz 3. patching file Tools/WebKitTestRunner/TestController.cpp patching file LayoutTests/ChangeLog Hunk #1 succeeded at 1 with fuzz 3. patching file LayoutTests/platform/wk2/TestExpectations Failed to run "[u'/Volumes/Data/EWS/WebKit/Tools/Scripts/svn-apply', '--force', '--reviewer', u'Brent Fulgham']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Full output:
http://webkit-queues.webkit.org/results/4021744
John Wilander
Comment 8
2017-06-29 15:07:53 PDT
Created
attachment 314176
[details]
Patch for landing
WebKit Commit Bot
Comment 9
2017-06-29 15:22:38 PDT
Comment on
attachment 314176
[details]
Patch for landing Clearing flags on attachment: 314176 Committed
r218965
: <
http://trac.webkit.org/changeset/218965
>
WebKit Commit Bot
Comment 10
2017-06-29 15:22:40 PDT
All reviewed patches have been landed. Closing bug.
John Wilander
Comment 11
2017-06-30 08:10:00 PDT
Committed
r218995
: <
http://trac.webkit.org/changeset/218995
>
John Wilander
Comment 12
2017-06-30 08:11:48 PDT
Last commit updated expectations with failure again. Haven't looked into why it fails now. Tested 500 iterations on my machine with no failure.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug